делаем смарт мани

--- a/Крипта && Трейдинг/Методичка смарта-мани.md
+++ b/Крипта && Трейдинг/Методичка смарта-мани.md
@@ -6,7 +6,19 @@ tags:
 ---
 ### Сайт методички - [https://smart-money.trading/smart-money-concept/]()
 
+
+
+
+# Содержание:
+1.  Определение - [[#^7e78c3]]
+2.  [[#Фазы рынка и циклы]]
+3.  [[#Структура рынка – определяем направление тренда]]
+4. [[#Структурные точки Swing]]
+5. 
+
 ### **Smart Money (**по-русски **Умные деньги**) _—_ это крупный капитал на рынке, у которого в распоряжение большие объемы активов и денежных средств.. Как правило ими являются центральные банки стран и крупные банки,  финансовые фонды, хедж-фонды, институциональные инвесторы, и другие крупные учреждения. Среди них выделить такие организации как Bank of America, Goldman Sachs Bank, Barclays.
+
+^7e78c3
 
 #### **_Smart Money Concept (Концепция Смарт Мани)_** _—_ набор торговых инструментов, которые позволяют увидеть на рынке различные действия и манипуляции с ценой – крупным капиталом.
 
@@ -21,9 +33,35 @@ tags:
  #### **Тех. анализ является наживкой для крупных игроков.** Так как они имеют крупный капитал и могут манипулировать ценой в нужном для себя направлении, используя инструменты розничных трейдеров, т.е. инструменты тех. анализа. В этом и вся разница между двумя стилями торговли.
 
 
+**Смарт мани полностью отличается от теханализа**, где розничные трейдеры пытаются следовать трендам. Вы наверное слышали что **95% трейдеров сливают свои депозиты** на рынке и это действительно так, только вот **думаю цифра занижена))** Даже Смарт Мани трейдеры не все могут стабильно зарабатывать из-за того что нету глубоко понимания всех инструментов, проблемы с эмоциями и психологией, недостаток опыта и банально не умеют управлять свои временем (тайм-менеджмент) и рисками (риск-менеджмент).
 
+![[Pasted image 20240523225716.png]]
 
+**Рынок всегда у нас в движение**, либо в трендовом направление: вверх или вниз, либо находится в боковом движение (накопление – покупки и распределение – продажи).
 
+Прежде чем произошло восходящее трендовое движение, крупному игроку необходимо накопить позицию, то есть зажать цену в узком диапазоне – _фаза накопления_, как только позиция набрана, затем происходит восходящий тренд, чтобы продать ранее накопленную позицию, цену необходимо снова зажать в боковике – _фаза распределения_.
 
+## Фазы рынка и циклы:
+![[Pasted image 20240523225930.png]]
+![[Pasted image 20240523231133.png]]
 
+### Структура рынка – определяем направление тренда
 
+**На рынке мы выделяем 2 вида тренда:**
+- **Глобальный тренд**, по-другому _Макроструктура или первичная структура_ – определяется на старших таймфреймах: **неделя (W1)**,  **дневка (D1)**, реже применяется **месяц (M)**, так как это достаточно долгий промежуток времени;
+- **Локальный тренд**, по-другому _Микроструктура или вторичная структура_ – определяется на младших таймфреймах: **4 часа (H4)**, **часовик (H1)**.
+
+Структура определяется с помощью структурных точек Swing High (Максимумы) и Swing Low (Минимумы). Структура состоит из 3 фаз рынка:
+
+- **Восходящая структура** – движение цены в котором обновляются значимые максимумы (HH),  без обновления значимых минимумов (HL).  
+- **Нисходящая структура** –  движение цены в котором обновляются значимые минимумы (LL),  без обновления значимых максимумов (LH). 
+- **Боковое движение** (Накопление или распределение) — движение цены в котором нету обновления значимых максимумов и минимумов.
+
+### Структурные точки Swing
+
+**Swing** – это структурная точка в которой происходит разворот цены.
+
+**Swing High** – наивысшая структурная точка, состоит из 3 последовательных свечей, где центральная свеча имеет более высокий максимум, а две крайние свечи имеют более низкие максимумы относительно центральной.
+
+**Swing Low** – самая низкая структурная точка, состоит из 3 последовательных свечей, где центральная свеча имеет более низкий минимум, а две крайние свечи имеют более высокие минимумы относительно центральной.
+![[Pasted image 20240523231827.png]]
