Большие правки димон

--- a/Крипта && Трейдинг/Методичка смарта-мани.md
+++ b/Крипта && Трейдинг/Методичка смарта-мани.md
@@ -51,6 +51,8 @@ tags:
 - **Глобальный тренд**, по-другому _Макроструктура или первичная структура_ – определяется на старших таймфреймах: **неделя (W1)**,  **дневка (D1)**, реже применяется **месяц (M)**, так как это достаточно долгий промежуток времени;
 - **Локальный тренд**, по-другому _Микроструктура или вторичная структура_ – определяется на младших таймфреймах: **4 часа (H4)**, **часовик (H1)**.
 
+ **Приоритет всегда более старшему таймфрейму!**
+
 Структура определяется с помощью структурных точек Swing High (Максимумы) и Swing Low (Минимумы). Структура состоит из 3 фаз рынка:
 
 - **Восходящая структура** – движение цены в котором обновляются значимые максимумы (HH),  без обновления значимых минимумов (HL).  
@@ -65,3 +67,8 @@ tags:
 
 **Swing Low** – самая низкая структурная точка, состоит из 3 последовательных свечей, где центральная свеча имеет более низкий минимум, а две крайние свечи имеют более высокие минимумы относительно центральной.
 ![[Pasted image 20240523231827.png]]
+
+
+### Слом структуры Bos
+
+Обновление структруных минимумов и максимумов!
