--- a/Крипта && Трейдинг/Начало.md
+++ b/Крипта && Трейдинг/Начало.md
@@ -2,10 +2,17 @@
 создал заметку: 2022-05-22
 tags:
   - Начало
-изучил?: true
+изучил?: false
 ---
 ### Описание
 Начало изучения, вспоминаем основы.
+
+## Содержание:
+1. [[Файлы от криптус]]
+2. [[Методичка смарта-мани]]
+3. [[Словарь-криптана]]
+4. [[30 идей пассивного дохода]]
+5. [[Список Tg-кликеров]]
 
 ## Правила трейдинга
 1. Тренд - твой друг.
@@ -20,14 +27,27 @@ tags:
 10. Меньше доверять всяким тг каналам, проверять инфу. 
 11. Придерживаться правил криптус и смарт мани
 
+## Список вопросов для исследования — чек-лист
 
-Содержание:
-1. [[Файлы от криптус]]
-2. [[Методичка смарта-мани]]
-3. [[Словарь-криптана]]
+Прежде чем вложить деньги в проект, проведите собственное расследование. Предлагаем список вопросов, который поможет тщательно проанализировать актив и понять, делаете ли вы правильный выбор.  
 
+|     |                                                                                        |
+| --- | -------------------------------------------------------------------------------------- |
+| 01  | Какова рыночная оценка проекта?                                                        |
+| 02  | Насколько проект соответствует документам (white paper и дорожной карте)?              |
+| 03  | Для решения какой проблемы создан проект?                                              |
+| 04  | Чем новый актив отличается от существующих активов конкурентов?                        |
+| 05  | Какие могут быть юридические проблемы у проекта и актива из-за законов в вашей стране? |
+| 06  | Кто финансирует развитие проекта?                                                      |
+| 07  | Какие партнеры есть у проекта?                                                         |
+| 08  | Какие методы продвижения используются, стандартные или агрессивные?                    |
+| 09  | Как проект оценивается в социальных сетях и поисковых системах?                        |
+| 10  | Как распределяются активы по направлениям (токеномика)?                                |
+| 11  | Какие у проекта выявлены риски или негативные факторы?                                 |
+| 12  | Как и где можно купить актив?                                                          |
 
-
+## Блокчейны:
+![[Pasted image 20240530114304.png]]
 ## *Консолидация* - движение при котором максимумы и минимумы не обновляются, цена зажата в диапазоне (боковик).
 
 
@@ -38,6 +58,8 @@ tags:
 
 
 ### Изображения:
+![[Pasted image 20240530113624.png]]
+![[Pasted image 20240530113632.png]]
 
 
 ![[Pasted image 20240522131323.png]]
