--- a/Education/Аниме/Список.md
+++ b/Education/Аниме/Список.md
@@ -1,7 +1,21 @@
-1. Человек бензопила
-2. Goodbye eri
-3. evangelion
-4. berserk
-5. Ванпачмен
-6. Killer seven
-7. темный мир
+1. [x]  Человек бензопила
+2. [x] Goodbye eri
+3. [x] evangelion
+4. [x] berserk
+5. [x] Ванпачмен
+6. [x] Killer seven
+7. [ ] темный мир
+8. [x] 5 сантиметров в секунду
+9. [x] туннель в лето
+10. [ ] твое имя
+11. [x] врата штейна
+12. [ ] дитя погоды
+13. [ ] судзума закрывающая двери
+14. [ ] принцесса моноке
+15. [ ] ветер крепчает
+16. [ ] ковбой бипоп
+17. [ ] хоримия
+18. [ ]  Навсикая из Долины ветров
+19. [ ] яйцо ангела
+20. [ ] на твоей волне
+21. [ ] код гиас
