--- a/Programming/C++/Все стандарты сразу.md
+++ b/Programming/C++/Все стандарты сразу.md
@@ -85,19 +85,19 @@ auto future = std::async([]() { return 42; });
 
 - [ ] `<atomic>`: Атомарные операции.
     
-- [ ] `<chrono>`: Работа со временем.
+- [x] `<chrono>`: Работа со временем.
     
-- [ ] `<condition_variable>`: Условные переменные для многопоточности.
+- [x] `<condition_variable>`: Условные переменные для многопоточности.
     
-- [ ] `<forward_list>`: Односвязный список.
+- [x] `<forward_list>`: Односвязный список.
     
-- [ ] `<future>`: Асинхронные операции.
+- [x] `<future>`: Асинхронные операции.
     
-- [ ] `<initializer_list>`: Поддержка инициализации списком.
+- [x] `<initializer_list>`: Поддержка инициализации списком.
     
 - [ ] `<mutex>`: Мьютексы.
     
-- [ ] `<random>`: Генерация случайных чисел.
+- [x] `<random>`: Генерация случайных чисел.
     
 - [ ] `<ratio>`: Рациональные числа.
     
@@ -109,15 +109,15 @@ auto future = std::async([]() { return 42; });
     
 - [ ] `<thread>`: Потоки.
     
-- [ ] `<tuple>`: Кортежи.
+- [x] `<tuple>`: Кортежи.
     
-- [ ] `<type_traits>`: Метапрограммирование.
+- [x] `<type_traits>`: Метапрограммирование.
     
-- [ ] `<typeindex>`: Индексация типов.
+- [x] `<typeindex>`: Индексация типов.
     
-- [ ] `<unordered_map>`: Хэш-таблицы (ассоциативные массивы).
+- [x] `<unordered_map>`: Хэш-таблицы (ассоциативные массивы).
     
-- [ ] `<unordered_set>`: Хэш-таблицы (множества).
+- [x] `<unordered_set>`: Хэш-таблицы (множества).
     
 
 ---
