--- a/Programming/C++/Стандарт 11.md
+++ b/Programming/C++/Стандарт 11.md
@@ -9,7 +9,7 @@ tags:
 
 
 
-- [ ] Семантика перемещения std::move
+- [x] Семантика перемещения std::move
  ```cpp
 int x = 0; // `x` is an lvalue of type `int`
 int& xl = x; // `xl` is an lvalue of type `int&`
@@ -28,7 +28,7 @@ f(xr2);           // calls f(int&)
 f(std::move(xr2)); // calls f(int&& x)
 auto&& - универсальная штука
 ```
-- [ ] Вариативные шаблоны
+- [x] Вариативные шаблоны
   ```cpp
   template<typename ...Arguments>  
 void foo(Arguments... args) {  
@@ -55,7 +55,7 @@ template <typename T, typename U> auto add(T t, U u) -> decltype(t + u) { return
 ```
 Я хз для чего видимо надо по идее это только в 11 стандарте
 
-- [ ]  Псевдоним типов
+- [x]  Псевдоним типов
 
 Semantically similar to using a `typedef` however, type aliases with `using` are easier to read and are compatible with templates.
 
@@ -72,7 +72,7 @@ String s {"foo"};
 В enum class крч можно забиндить данные на какоето значение, те цвет красные будет возвращать true или число, но изменять данные нельзя, бери структуры.
 
 
-- [ ] Атрибуты
+- [x] Атрибуты
 
 Атрибуты обеспечивают универсальный синтаксис поверх `__attribute__(...)`, `__declspec` и т.д.
 
