--- a/Programming/C++/Все стандарты сразу.md
+++ b/Programming/C++/Все стандарты сразу.md
@@ -95,9 +95,9 @@ auto future = std::async([]() { return 42; });
     
 - [x] `<initializer_list>`: Поддержка инициализации списком.
     
-- [ ] `<mutex>`: Мьютексы.
+- [x] `<mutex>`: Мьютексы.
     
-- [x] `<random>`: Генерация случайных чисел.
+- [ ] `<random>`: Генерация случайных чисел.
     
 - [ ] `<ratio>`: Рациональные числа.
     
@@ -107,13 +107,13 @@ auto future = std::async([]() { return 42; });
     
 - [ ] `<system_error>`: Обработка системных ошибок.
     
-- [ ] `<thread>`: Потоки.
+- [x] `<thread>`: Потоки.
     
 - [x] `<tuple>`: Кортежи.
     
-- [x] `<type_traits>`: Метапрограммирование.
+- [ ] `<type_traits>`: Метапрограммирование.
     
-- [x] `<typeindex>`: Индексация типов.
+- [ ] `<typeindex>`: Индексация типов.
     
 - [x] `<unordered_map>`: Хэш-таблицы (ассоциативные массивы).
     
