--- a/Programming/C++/Стандарт 11.md
+++ b/Programming/C++/Стандарт 11.md
@@ -41,7 +41,7 @@ int main() {
 ```
 
 
-- [ ] Статические утверждения
+- [x] Статические утверждения
 Утверждения, которые оцениваются во время компиляции.
 ```c
 int constexpr x = 0;
@@ -54,6 +54,15 @@ static_assert(x == y, "x != y");
 template <typename T, typename U> auto add(T t, U u) -> decltype(t + u) { return t + u; }
 ```
 Я хз для чего видимо надо по идее это только в 11 стандарте
+```cpp
+template<typename ContainerType, typename IndexType>                // C++14
+decltype(auto) grab(ContainerType&& container, IndexType&& index)
+{
+  authenticateUser();
+  return std::forward<ContainerType>(container)[std::forward<IndexType>(index)];
+    //для примера
+}
+```
 
 - [x]  Псевдоним типов
 
@@ -72,7 +81,7 @@ String s {"foo"};
 В enum class крч можно забиндить данные на какоето значение, те цвет красные будет возвращать true или число, но изменять данные нельзя, бери структуры.
 
 
-- [x] Атрибуты
+- [ ] Атрибуты
 
 Атрибуты обеспечивают универсальный синтаксис поверх `__attribute__(...)`, `__declspec` и т.д.
 
@@ -84,7 +93,7 @@ String s {"foo"};
 }
 ```
 
-### Делегирование конструкторов
+- [x] Делегирование конструкторов
 
 ```c
 struct Foo {
@@ -172,7 +181,7 @@ std::to_string(123); // == "123"
 
 
 ### Tuples
-
+- [x] +- понял
 Tuples are a fixed-size collection of heterogeneous values. Access the elements of a `std::tuple` by unpacking using [`std::tie`](https://github.com/AnthonyCalandra/modern-cpp-features/blob/master/CPP11.md#stdtie), or using `std::get`.
 
 ```c
@@ -185,6 +194,7 @@ std::get<2>(playerProfile); // "NYI"
 
 ### std::array
 `std::array` is a container built on top of a C-style array. Supports common container operations such as sorting.
+- [x] изучено
 
 ```c
 std::array<int, 3> a = {2, 1, 3};
@@ -193,7 +203,7 @@ for (int& x : a) x *= 2; // a == { 2, 4, 6 }
 ```
 
 ### std::асинхронный
-
+- [x] наизусть
 `std::async` запускает заданную функцию либо асинхронно, либо с отложенным выполнением, а затем возвращает `std::future` с результатом вызова этой функции.
 
 Первый параметр - это политика, которая может быть:
