--- a/Programming/C++/21 новая функция современного с++.md
+++ b/Programming/C++/21 новая функция современного с++.md
@@ -101,3 +101,23 @@ int main(){
 ```
 
 
+## Вызов лямбды в момент инициализации
+
+```cpp
+const int max = [](){return 13;};
+//без круглых скобочек в конце ошибка, если использовать auto
+//будет лямбдой а вот если вызывать все работает
+const int max = [](){return 13;}();
+```
+
+
+## Определение типа данных на месте
+
+
+```cpp
+enum class Config {
+ Debug = 0,
+ Release = 1
+} config
+//обьявили структуру данных и сразу как тип ее использовали
+```
