--- a/Programming/C++/Сборка.md
+++ b/Programming/C++/Сборка.md
@@ -98,3 +98,58 @@ gdb -tui ./programm
 ![[Pasted image 20250728235743.png]]
 
 выравнивание по 8 байтов
+
+## Линкер
+
+![[Pasted image 20250731015503.png]]
+
+Почему хедерами пользуются и лучше всего использовать forward declaration? Препроцессор копируют реализацию класса в каждый cpp файл, то есть каждый изменяется и каждый должен быть перекомпилирован.
+
+![[Pasted image 20250731022950.png]]
+Forward declaration для классов.
+Его нужно использовать, что б потом в не перекомпилировать файлы.
+
+Если в вашем классе Character в заголовочном файле (header) вы используете только указатель или ссылку на класс Weapon, то **действительно достаточно сделать forward declaration в хедере** и включить полный заголовок Weapon.h в cpp-файле (реализации). Это стандартная и предпочтительная практика в C++ по нескольким причинам:
+
+- Включение полного заголовка Weapon.h в хедер Character.h приводит к более **жёсткой связности** между модулями — при изменении Weapon.h потребуется перекомпилировать все, кто включает Character.h.
+
+```cpp
+# <iosfwd> // более короткий вариант iostream
+```
+
+##  Прекомпилированные заголовки
+
+Для ускорения сборки, что нужно:
+
+- Создай хэдр и вставь в него все #include, а откуда взял, удали.
+- Создай cpp файл и включи в него хэдр.
+- Компилируй указывая заголовочный и спп файл (загугли опцию компилятора)
+- Используй его вместо заголочных
+- Дальше просто компилируешь все файлы, добавляя ЗАГОЛОВОЧНЫЙ файл с определенным флагом.
+
+**В 3 раза быстрее!!!**
+
+Изменения касаются только заголовочных и тех, что от них зависят!
+
+При изменение заголовочных перекомпилируется pch, но не при cpp.
+
+Unity-build - это когда несколько с++ файлов обьединяются в 1 и компилируются разом.
+
+Только это не будет работать, если у тебя есть несколько внутренних функций в разный файлах, static например.
+
+## Статические библиотеки
+
+
+Статические библиотеки - это сборник объектных файлов.
+
+![[Pasted image 20250802235251.png]]
+
+
+## Динамическая библиотека
+
+![[Pasted image 20250803000924.png]]
+
+![[Pasted image 20250803001106.png]]
+
+В dll нужно явно указывать, какие функции будут импортироваться и экспортироваться.
+![[Pasted image 20250803003221.png]]
