--- a/Programming/C++/21 новая функция современного с++.md
+++ b/Programming/C++/21 новая функция современного с++.md
@@ -58,7 +58,7 @@ public:
 demo obj{123, true, "lol", 1.1};
 
 ```
-## std::кортеж
+## std::tuple
 ```cpp
 auto employee = std::make_tuple(32, " Vishal Chovatiya", "Bangalore");
 cout << std::get<0>(employee) << endl; // 32<br>cout << std::get<1>(employee) << endl; // "Vishal Chovatiya"<br>cout << std::get<2>(employee) << endl; // "Bangalore"<br>```|
