--- a/Programming/C++/Все стандарты сразу.md
+++ b/Programming/C++/Все стандарты сразу.md
@@ -97,7 +97,7 @@ auto future = std::async([]() { return 42; });
     
 - [x] `<mutex>`: Мьютексы.
     
-- [ ] `<random>`: Генерация случайных чисел.
+- [x] `<random>`: Генерация случайных чисел.
     
 - [ ] `<ratio>`: Рациональные числа.
     
@@ -279,9 +279,6 @@ std::string s = std::format("Hello, {}!", "world");
 
 ---
 ## **C++23**
-
-C++23 — это текущий стандарт, который добавляет новые возможности.
-
 ### Основные нововведения:
 
 39. **`std::expected`**:
