--- a/Programming/C++/Стандарт 11.md
+++ b/Programming/C++/Стандарт 11.md
@@ -108,6 +108,8 @@ String s {"foo"};
 [[ noreturn ]] void f() {
  throw "error";
  //ты гуглил делай так, полезно те она говорит что НИКОГДА не возвращает управление
+ // это значитит что код после нее недостижим
+ // она закончит программу
 }
 ```
 
@@ -220,7 +222,7 @@ std::sort(a.begin(), a.end()); // a == { 1, 2, 3 }
 for (int& x : a) x *= 2; // a == { 2, 4, 6 }
 ```
 
-### std::асинхронный
+### std::async
 - [x] наизусть
 `std::async` запускает заданную функцию либо асинхронно, либо с отложенным выполнением, а затем возвращает `std::future` с результатом вызова этой функции.
 
