--- a/Programming/C++/Стандарт 20.md
+++ b/Programming/C++/Стандарт 20.md
@@ -28,7 +28,7 @@ tags:
 - `predicate` — указывает на то, что вызываемый тип является логическим предикатом.
 
 
-### std::format 
+### std::format 🗸
 
 ```cpp
 std::format("{1} {0}", "world", "hello"); // == "hello world"
@@ -66,7 +66,7 @@ fraction f{1, 2};
 std::format("{}", f); // == "1/2"
 ```
 
-### Синхронизированный буферный выходной поток
+### Синхронизированный буферный выходной поток 🗸
 
 Буферы выводят операции для обернутого выходного потока, обеспечивая синхронизацию (то есть отсутствие чередования вывода).
 
@@ -75,7 +75,7 @@ std::osyncstream{std::cout} << "Значение x равно:" << x
 << std::endl;
 ```
 
-### std::span
+### std::span 🗸
 Спэн — это представление (т. е. не являющееся владельцем) контейнера, обеспечивающее доступ к смежной группе элементов с проверкой границ. Поскольку представления не являются владельцами своих элементов, их создание и копирование не требуют больших затрат. Упрощённо можно представить, что представления содержат ссылки на свои данные. Вместо того чтобы хранить указатель/итератор и поле длины, спэн объединяет их в одном объекте.
 
 Интервалы могут быть динамическими или фиксированными (известными как _extent_). Интервалы с фиксированным размером позволяют проверять границы.
@@ -234,7 +234,7 @@ A struct {
 A a {.x = 1, .z = 2}; // a.x == 1, a.y == 0, a.z == 2
 ```
 
-### Цикл for на основе диапазона с инициализатором
+### Цикл for на основе диапазона с инициализатором 🗸
 
 Эта функция упрощает распространённые шаблоны написания кода, помогает сократить объём кода и предлагает элегантное решение распространённой проблемы, связанной с жизненным циклом.
 
@@ -245,7 +245,7 @@ for (auto v = std::vector{1, 2, 3}; auto& e : v) {
 // выводит "123"
 ```
 
-### вероятные и маловероятные атрибуты
+### вероятные и маловероятные атрибуты 🗸
 
 Подсказывает оптимизатору, что помеченный оператор с высокой вероятностью будет выполнен.
 
@@ -298,7 +298,7 @@ int_value struct {
 ```
 
 
-### виртуальные функции constexpr
+### виртуальные функции constexpr 🗸
 
 Виртуальные функции теперь можно создавать `constexpr` и оценивать во время компиляции. `constexpr` виртуальные функции могут переопределять невиртуальные функции `constexpr` и наоборот.
 
@@ -323,7 +323,7 @@ constexpr X4 x4;
 x4.f(); // == 4
 ```
 
-### char8_t
+### char8_t 🗸
 
 Предоставляет стандартный тип для представления строк в кодировке UTF-8.
 
