--- a/Programming/C++/стандарт 17.md
+++ b/Programming/C++/стандарт 17.md
@@ -1,4 +1,4 @@
-### std::variant
+### std::variant 🗸
 
 ```cpp
 std::variant<int, double> v{ 12 };
@@ -7,12 +7,21 @@ std::get<0>(v); // == 12
 v = 12.0;
 std::get<double>(v); // == 12.0
 std::get<1>(v); // == 12.0
+
+
+if (auto p = std::get_if<int>(&v)) 
+{ 
+std::cout << "int: " << *p << '\n';
+}
+else { 
+std::cout << "Not an int\n";
+}`
 ```
 
 - **Размер объекта равен размеру самого большого из типов** плюс небольшой служебный индекс, указывающий активный тип[3](https://habr.com/ru/articles/804837/).
 - Обеспечивает **безопасный доступ к значению** через функции `std::get<T>`, `std::get_if<T>`, и проверку типа через `std::holds_alternative<T>`[6](https://learn.microsoft.com/ru-ru/cpp/standard-library/variant-functions?view=msvc-170).
 
-### std::optional
+### std::optional 🗸
 
 ```cpp
 #include <iostream>
@@ -37,7 +46,7 @@ int main() {
 }
 ```
 
-### std::any
+### std::any 🗸
 `std::any` — это тип из C++, который позволяет хранить значения произвольного типа. В отличие от `std::variant`, где типы должны быть заранее определены, `std::any` может хранить значение любого типа, что делает его очень гибким.
 
 ```cpp
@@ -55,10 +64,18 @@ int main() {
     }
     return 0;
 }
+
+std::any a = 12;
+
+ std::println("int any {}", std::any_cast<int>(a));
+ a = std::string("sssss");
+ std::println("string any {}", std::any_cast<std::string>(a));
+
+
 ```
 
 **Никаких неявных сужений!!!**
-### std::string_view
+### std::string_view 🗸
 
 ```cpp
 // Regular strings.
@@ -71,7 +88,7 @@ std::string_view array_v(array, std::size(array));
 ```
 
 
-### std::invoke
+### std::invoke 🗸
 `std::invoke` — это утилита, представленная в C++17, которая предоставляет унифицированный способ вызова различных видов вызываемых объектов. Она позволяет вызывать функции, указатели на функции, функциональные объекты и другие вызываемые сущности с использованием одного интерфейса.
 
 ```cpp
@@ -94,7 +111,7 @@ int main() {
     return 0;
 }
 ```
-### std::apply
+### std::apply 🗸
 `std::apply` — это функция, представленная в C++17, которая позволяет вызывать вызываемый объект (например, функцию) с аргументами, извлеченными из кортежа. Это особенно удобно, когда у вас есть кортеж, содержащий аргументы функции, и вы хотите передать их в функцию.
 
 ```cpp
@@ -117,7 +134,7 @@ int main() {
 ```
 
 
-### std::filesystem
+### std::filesystem 🗸
 `std::filesystem` — это библиотека, представленная в C++17, которая предоставляет кроссплатформенный интерфейс для работы с файловой системой. Она позволяет выполнять различные операции с файлами и директориями, такие как создание, удаление, копирование, перемещение и проверка их свойств.
 
 ```cpp
@@ -173,8 +190,7 @@ int main() {
 
 ```cpp
 Moving elements from one map to another:
-
-```c
+//перемещение элементов из 1 контейнера в другой, и возможность изменять ключ без перезаписи
 std::map<int, string> src {{1, "one"}, {2, "two"}, {3, "buckle my shoe"}};
 std::map<int, string> dst {{3, "three"}};
 dst.insert(src.extract(src.find(1))); // Cheap remove and insert of { 1, "one" } from `src` to `dst`.
@@ -221,7 +237,7 @@ m.insert(std::move(e));
 ```cpp
 
 ```
-### std::sample
+### std::sample +-
 `std::sample` — это функция, представленная в C++17, которая используется для случайного выбора элементов из диапазона. Она полезна, когда нужно получить случайную подвыборку из большого набора данных.
 ```cpp
 #include <iostream>
@@ -250,7 +266,7 @@ int main() {
 
 ```
 
-### std::clamp
+### std::clamp 🗸
 `std::clamp` — это функция, представленная в C++17, которая ограничивает значение в заданном диапазоне. Если значение меньше нижней границы, оно устанавливается равным этой границе. Если значение больше верхней границы, оно устанавливается равным этой верхней границе. Если значение находится в пределах диапазона, оно остаётся неизменным.
 
 ```cpp
@@ -269,7 +285,7 @@ int main() {
     return 0;
 }
 ```
-### std::reduce
+### std::reduce 🗸
 `std::reduce` — это алгоритм, представленный в C++17, который используется для выполнения операции свертки на диапазоне элементов. Он объединяет элементы диапазона в одно значение с помощью заданной операции.
 
 ```cpp
