--- a/Programming/Linux/Топ ПО.md
+++ b/Programming/Linux/Топ ПО.md
@@ -1,5 +1,21 @@
 - MobaXterm для администрирования
-- Rufus для форматирования
-- TaskExplorer диспетчер задач
+- Rufus для форматирования flash накопителей, на виндовс
+- TaskExplorer диспетчер задач на виндовс
 - lazy docker
-- Requetly типо postman только круче
+- Requestly типо postman только круче
+- squshfs для архивации, замена tar
+- Desmos платформа для визуализации математических концепций
+- Scribus типо ворд редактора на линукс
+-  Process Monitor для винды, Logger LogViewer, Core OS events
+- strace
+- xournal
+- Markmap site for Markdown
+- Wokwi для микроконтроллеров
+- GNU stow
+- Etka документация для машин, Diagnostik Tool
+- Linutil автомат оптимизация линукс
+
+## ОС
+- Managarm
+- MidnightBSD
+- Artix
